--- a/HomePage.html
+++ b/HomePage.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1>Bliss Software Solutions</h1>
-<img src="/Users/varma/Desktop/Bliss Logo.jpg" alt="Bliss Software Solutions" width="104" height="142">
+<img src="/sources/Logos/Bliss Logo.jpg" alt="Bliss Software Solutions" width="104" height="142">
 <p> This is the home page of my limited company website</p>
 <a href="https://www.ap7am.com"> Click this link for latest telugu news</a>
 </body>
